--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -71,11 +71,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@types/big.js": "^6.1.3",
-    "@types/mime": "^2.0.3",
-    "big.js": "^6.1.1",
-    "dayjs": "^1.11.1",
-    "html2canvas": "^1.4.1",
-    "mime": "^3.0.0"
+    "@types/lodash-es": "^4.17.7",
+    "lodash-es": "^4.17.21"
   }
 }
