--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@latejs/react-hooks",
-  "version": "1.0.4",
+  "name": "hooks-react-using",
+  "version": "1.0.0",
   "description": "业务常用的工具库",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
