--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hooks-react-using",
-  "version": "1.0.3",
-  "description": "业务常用的工具库",
+  "version": "1.0.4",
+  "description": "业务常用的react-hooks工具库",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
@@ -37,8 +37,8 @@
     "dist"
   ],
   "keywords": [
-    "utils",
-    "js"
+    "react",
+    "hooks"
   ],
   "author": "",
   "license": "ISC",
