--- a/packages/hooks-react-using/package.json
+++ b/packages/hooks-react-using/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hooks-react-using",
   "version": "1.0.5",
-  "description": "业务常用的react-hooks工具库",
+  "description": "react-hooks",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
