--- a/packages/hooks-react-using/package.json
+++ b/packages/hooks-react-using/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/laterly/hooks-react-using",
   "scripts": {
     "dev": "cross-env NODE_ENV=development rollup -w -c",
     "build": "yarn clean && cross-env NODE_ENV=production rollup -c",
