--- a/packages/hooks-react-using/package.json
+++ b/packages/hooks-react-using/package.json
@@ -65,6 +65,10 @@
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
   },
+  "peerDependencies": {
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
+  },
   "dependencies": {
     "@types/lodash-es": "^4.17.7",
     "lodash-es": "^4.17.21"
