--- a/packages/hooks-react-using/package.json
+++ b/packages/hooks-react-using/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hooks-react-using",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "react-hooks",
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.esm.js",
+  "main": "./dist/index.js",
+  "module": "./es/index.js",
   "types": "./dist/index.d.ts",
   "homepage": "https://github.com/laterly/hooks-react-using",
   "sideEffects": false,
@@ -39,8 +39,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -59,6 +63,7 @@
     "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
